# tce-conf

./: LICENSE  README.md  Setup.hs  TODO  TODO.md  changelog.md  package.yaml  stack.yaml  tce-conf.cabal
app/: KVConf-example.hs  ReadConf-example.hs
doc/examples/: KVConf-example.hs  ReadConf-example.hs  examples.cabal  kv-example.conf  read-example.conf
resources/: read-example.conf
src/TCE/Data/: KVConf.hs  ReadConf.hs  SimpleConf.hs
src/app/: KVConf-example.hs  ReadConf-example.hs
src/tests/: KVConf.hs  ReadConf.hs
testsuite/: KVConf.hs  ReadConf.hs  SimpleConf.hs  test-hsmisc.hs
util/prefs/: boring
