name:                examples
version:             1.0
license:             BSD3
author:              Dino Morelli
maintainer:          dino@ui3.info
category:            Documentation
build-type:          Simple
cabal-version:       >=1.10

executable KVConf-example
  main-is:             KVConf-example.hs
  build-depends:         base >= 3 && < 5
                       , containers
                       , tce-conf
  default-language:    Haskell2010

executable ReadConf-example
  main-is:             ReadConf-example.hs
  build-depends:         base >= 3 && < 5
                       , containers
                       , tce-conf
  default-language:    Haskell2010
